# R-Type

./: .gitignore  CMakeLists.txt  CMakePresets.json  MULTIPLE_GAMES.md  README.md  conanfile.txt
config/: engine.ini  game.ini  systems.ini
config_spaceinvaders/: assets.ini  engine.ini  game.ini  systems.ini
docs/: accessibility.md  api_reference.md  architecture.md  building_and_running.md  configuration_guide.md  deep_architecture.md  developer_guide.md  gameplay_guide.md  protocol.md  sound_system.md  sprite_configuration.md
docs/wiki/: Accessibility.md  Architecture.md  Building and Running.md  Configuration.md  Contributing.md  FAQ and Troubleshooting.md  Gameplay Guide.md  Home.md  Modules and API.md  Networking.md  Sound System.md
include/rtype/client/: GameClient.hpp  IRender.hpp  MenuState.hpp  RemoteDisplay.hpp  SFMLRenderer.hpp  SpriteManager.hpp
include/rtype/common/: AsioNetwork.hpp  Components.hpp  GameConfig.hpp  INetwork.hpp  Protocol.hpp  Types.hpp
include/rtype/engine/: ISystem.hpp  Registry.hpp  SystemPipeline.hpp
include/rtype/server/: ClientHandler.hpp  EntityFactory.hpp  GameLogicHandler.hpp  GameServer.hpp  GameSystems.hpp  Room.hpp  RoomManager.hpp
scripts/: bootstrap.sh  build.ps1  launch.ps1  launch.sh  launch_client.ps1
src/: CMakeLists.txt
src/assets/textures/default/: r-typesheet1-explosion.json  r-typesheet1-player-shield.json  r-typesheet1-player.json  r-typesheet1.json  r-typesheet11.json  r-typesheet2-enemy.json  r-typesheet2.json  r-typesheet24.json  r-typesheet32.json  r-typesheet37.json  r-typesheet39.json  r-typesheet5.json  r-typesheet7.json  r-typesheet8.json  r-typesheet9.json
src/assets/textures/spaceinvaders/: r-typesheet1-player.json  r-typesheet2-enemy.json  r-typesheet2.json  r-typesheet5.json  r-typesheet7.json  r-typesheet8.json
src/client/: GameClient.cpp  SFMLRenderer.cpp  SpriteManager.cpp  main.cpp
src/common/config/: GameConfig.cpp
src/common/protocol/: Protocol.cpp
src/engine/: Registry.cpp  SystemPipeline.cpp
src/server/: ClientHandler.cpp  EntityFactory.cpp  GameLogicHandler.cpp  GameServer.cpp  Room.cpp  RoomManager.cpp  main.cpp
src/server/systems/: Boss2BehaviorSystem.cpp  BoundarySystem.cpp  CleanupSystem.cpp  CollisionSystem.cpp  FireCooldownSystem.cpp  LaserBeamSystem.cpp  LevelSystem.cpp  MovementSystem.cpp  PlayerInputSystem.cpp  PowerUpSystem.cpp  ProjectileLifetimeSystem.cpp  ShieldFollowSystem.cpp  ShootingSystem.cpp  WeaponDamageSystem.cpp
(+14 files in other folders)
